crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__case_missing_of.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Case(&Case::Of(1, 9), 1, 9), \"value = \")"
---
MISSING OF
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `of` after the case value.

Add `of` before the case branches.
