crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__case_reserved_pattern.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Case(&Case::Arrow(1, 9), 1, 9), \"value = if\")"
---
RESERVED WORD
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a `case` expression, but I got stuck here:

It looks like you are trying to use `if` in one of your patterns, but it is a
reserved word. Try using a different name?

    case maybeWidth of
      Some width ->
        width + 200

      None ->
        400

Notice the indentation. Each pattern is aligned, and each branch is indented a
bit more than the corresponding pattern. That is important!
