crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__case_subject_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = case x -> y of
---
nash::syntax

  × Unexpected `->` in expression.
   ╭─[src/Main.nash:1:16]
 1 │ value = case x -> y of
   ·                ──
   ╰────
  help: Add `of` before the case branches.
