crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__case_wrong_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = case x of Some width =
---
nash::syntax

  × Expected `->` after the pattern.
   ╭─[src/Main.nash:1:30]
 1 │ value = case x of Some width =
   ·                              ─
   ╰────
  help: Separate the pattern and branch body with `->`.
