crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_alignment.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let\n    x = 1\n  y = 2\n    in x"
---
nash::syntax

  × Definition and annotation must align.
   ╭─[src/Main.nash:3:3]
 2 │     x = 1
 3 │   y = 2
   ·   ─
 4 │     in x
   ╰────
  help: Indent the definition with 4 spaces.
