crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_equals.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::Def(\"x\", &Def::Equals(1, 9), 1, 9), 1, 9),\n\"value = \")"
---
PROBLEM IN DEFINITION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I got stuck while parsing the `x` definition:

I was expecting to see an argument or an equals sign next.

    greet : string -> string
    greet name =
        "Hello " ++ name

The top line is an optional type annotation. It works as compiler-verified
documentation and often improves error messages!
