crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__def_indent_type.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let x :\nint"
---
nash::syntax

  × Expected a type after `:`.
   ╭─[src/Main.nash:2:1]
 1 │ value = let x :
 2 │ int
   · ─
   ╰────
  help: Add an indented type annotation.
